k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retailpulse-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: retailpulse-api
  template:
    metadata:
      labels:
        app: retailpulse-api
    spec:
      containers:
        - name: api
          image: retailpulse:latest
          imagePullPolicy: IfNotPresent
          command: ["uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retailpulse-streamlit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retailpulse-streamlit
  template:
    metadata:
      labels:
        app: retailpulse-streamlit
    spec:
      containers:
        - name: streamlit
          image: retailpulse:latest
          imagePullPolicy: IfNotPresent
          command: ["streamlit", "run", "app.py", "--server.address=0.0.0.0", "--server.port=8501"]
          ports:
            - containerPort: 8501
