k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retailpulse-api
spec:
  selector:
    app: retailpulse-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: retailpulse-streamlit
spec:
  selector:
    app: retailpulse-streamlit
  ports:
    - name: http
      port: 8501
      targetPort: 8501
